# MITScript

./: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  cli.cpp  docker.sh  gc.hpp  lexer.hpp  parser.cpp  parser.hpp  prettyprinter.cpp  run.sh  test.sh  types.hpp
additional-tests/: test1.mit  test10.mit  test11.mit  test12.mit  test13.mit  test14.mit  test15.mit  test16.mit  test17.mit  test18.mit  test19.mit  test2.mit  test20.mit  test3.mit  test4.mit  test5.mit  test6.mit  test7.mit  test8.mit  test9.mit
src/: ast.hpp  cli.hpp  interp.hpp  lexer.cpp  main.cpp
src/bytecode/: instructions.hpp  lexer.cpp  lexer.hpp  parser.hpp  prettyprinter.hpp  token.hpp
